fix(header): modify header UI to make intro elements visible in mobile view

--- a/app/apps/general/styles/about/_intro.scss
+++ b/app/apps/general/styles/about/_intro.scss
@@ -43,6 +43,16 @@
    background-color: $green;
  }
 
+ .nav-abt{
+  padding-left: 70px;
+  padding-top: 3px;
+ }
+
+ .smv-lk .dropdown{
+  color:#FFF;
+  font-size: 1.1em;
+ }
+
 .tel-nos{
   min-width: 220px; 
   overflow: hidden;
@@ -123,6 +133,8 @@
       -webkit-box-shadow: 0px 3px 0px $army-green;
       -moz-box-shadow: 0px 3px 0px $army-green;
       box-shadow: 0px 3px 0px $army-green;
+      margin-top: 10px;
+      margin-left: 40px;
     }
 
     button:hover {
